--- a/packages/vanilla/index.html
+++ b/packages/vanilla/index.html
@@ -21,6 +21,6 @@
   </head>
   <body class="bg-gray-50">
     <div id="root"><!--app-html--></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/entry-client.js"></script>
   </body>
 </html>
